--- a/en/index.html
+++ b/en/index.html
@@ -123,7 +123,7 @@ window.onclick = function(event) {
           <div class="box box_footer">Footer</div>
         </div>
       </div>
-      <h1>HOLAHOLAHOL_</h1>
+      <h1>ESPEREMOS QUE CAMBIES AHORA</h1>
 
 </body>
 </html>
