--- a/en/index.html
+++ b/en/index.html
@@ -124,6 +124,7 @@ window.onclick = function(event) {
         </div>
       </div>
       <h1>ESPEREMOS QUE CAMBIES AHORA</h1>
+    <h1>ESPEREMOS QUE CAMBIES AHORA</h1>
 
 </body>
 </html>
