--- a/en/index.html
+++ b/en/index.html
@@ -123,7 +123,7 @@ window.onclick = function(event) {
           <div class="box box_footer">Footer</div>
         </div>
       </div>
-      <h1>Ok, ahora voy a hacer una prueba para ver si se sincroniza el repo entre varios pcs</h1>
+      <h1>Confirmo, se pueden sincronizar los cambios. muy satisfactorio</h1>
 
 </body>
 </html>
