Todo guay, mola como van fluyendo las cosas

--- a/en/index.html
+++ b/en/index.html
@@ -123,7 +123,7 @@ window.onclick = function(event) {
           <div class="box box_footer">Footer</div>
         </div>
       </div>
-      <h1>Confirmo, se pueden sincronizar los cambios. muy satisfactorio</h1>
+      <h1>Esperando para crear el footer... y de paso probamos a hacer un commit jejejej</h1>
 
 </body>
 </html>
