Probando el responsive de los iconos

--- a/en/index.html
+++ b/en/index.html
@@ -109,8 +109,9 @@ window.onclick = function(event) {
       <div id="contenedor_grid">
         <div class="grid">
           <div class="box box_header">
-            <div class="foto_grid">
-              <a href="#"><img class="imagen_grid" src="../img/fotos_nuestras/3.jpeg" alt=""></a>
+            <div class="div_icono_grid">
+              <a href="#">
+                <div class="centrado_icono"><img class="icono_grid" src="./icons/study-2-svgrepo-com.svg" alt=""></div></a>
             </div>
             <div class="texto_grid">
               <div class="titulo_grid"><h1>sadas</h1></div>
