hemos adaptado el grid para que cuando se haga pequeño see quite la imagen y se pueda ver el texto

--- a/en/index.html
+++ b/en/index.html
@@ -114,8 +114,8 @@ window.onclick = function(event) {
                 <div class="centrado_icono"><img class="icono_grid" src="./icons/study-2-svgrepo-com.svg" alt=""></div></a>
             </div>
             <div class="texto_grid">
-              <div class="titulo_grid"><h1>sadas</h1></div>
-              <div class="cuerpo_grid"><p>Hey</p></div>
+              <div class="titulo_grid"><h1>Diferentes Grados</h1></div>
+              <div class="cuerpo_grid"><p>Hola! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam eum illum qui sequi quidem, magnam quia. Maxime perferendis, ab nulla quod nam illo animi dignissimos amet corrupti facilis vel delectus.</p></div>
             </div>
           </div>
           <div class="box box_menu">Menu</div>
