--- a/en/index.html
+++ b/en/index.html
@@ -115,7 +115,7 @@ window.onclick = function(event) {
             </div>
             <div class="texto_grid">
               <div class="titulo_grid"><h1>Diferentes Grados</h1></div>
-              <div class="cuerpo_grid"><p>Hola! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam eum illum qui sequi quidem, magnam quia. Maxime perferendis, ab nulla quod nam illo animi dignissimos amet corrupti facilis vel delectus.</p></div>
+              <div class="cuerpo_grid"><p>Hola! Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere,nasjdnsasjknd askdjalsjdas laksjdlkasjlkdjas ksajdlkasj kasdn lknsad lksndklansdklna lksandklasn lk</p></div>
             </div>
           </div>
           <div class="box box_menu">Menu</div>
