arreglado el grid

--- a/en/index.html
+++ b/en/index.html
@@ -108,7 +108,9 @@ window.onclick = function(event) {
 
       <div id="contenedor_grid">
         <div class="grid">
-          <div class="box box_header">
+
+          <!-- diferentes grados -->
+          <div class="box box_grados">
             <div class="div_icono_grid">
               <a href="#">
                 <div class="centrado_icono"><img class="icono_grid" src="./icons/study-2-svgrepo-com.svg" alt=""></div></a>
@@ -118,11 +120,65 @@ window.onclick = function(event) {
               <div class="cuerpo_grid"><p>Hola! Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere,nasjdnsasjknd askdjalsjdas laksjdlkasjlkdjas ksajdlkasj kasdn lknsad lksndklansdklna lksandklasn lk</p></div>
             </div>
           </div>
-          <div class="box box_menu">Menu</div>
-          <div class="box box_content">Content</div>
-          <div class="box box_slide_bar1">Slide Bar</div>
-          <div class="box box_slide_bar2">Slide Bar</div>
-          <div class="box box_footer">Footer</div>
+
+          <!-- nose -->
+          <div class="box box_">
+            <div class="div_icono_grid">
+              <a href="#">
+                <div class="centrado_icono"><img class="icono_grid" src="./icons/study-2-svgrepo-com.svg" alt=""></div></a>
+            </div>
+            <div class="texto_grid">
+              <div class="titulo_grid"><h1>Diferentes Pakos</h1></div>
+              <div class="cuerpo_grid"><p>Hola! Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere,nasjdnsasjknd askdjalsjdas laksjdlkasjlkdjas ksajdlkasj kasdn lknsad lksndklansdklna lksandklasn lk</p></div>
+            </div>
+          </div>
+
+
+          <div class="box box_content">
+            <div class="div_icono_grid">
+              <a href="#">
+                <div class="centrado_icono"><img class="icono_grid" src="./icons/study-2-svgrepo-com.svg" alt=""></div></a>
+            </div>
+            <div class="texto_grid">
+              <div class="titulo_grid"><h1>Diferentes Pepes</h1></div>
+              <div class="cuerpo_grid"><p>Hola! Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere,nasjdnsasjknd askdjalsjdas laksjdlkasjlkdjas ksajdlkasj kasdn lknsad lksndklansdklna lksandklasn lk</p></div>
+            </div>
+          </div>
+
+          <div class="box box_slide_bar1">
+            <div class="div_icono_grid">
+              <a href="#">
+                <div class="centrado_icono"><img class="icono_grid" src="./icons/study-2-svgrepo-com.svg" alt=""></div></a>
+            </div>
+            <div class="texto_grid">
+              <div class="titulo_grid"><h1>Diferentes Joses</h1></div>
+              <div class="cuerpo_grid"><p>Hola! Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere,nasjdnsasjknd askdjalsjdas laksjdlkasjlkdjas ksajdlkasj kasdn lknsad lksndklansdklna lksandklasn lk</p></div>
+            </div>
+          </div>
+
+
+          <div class="box box_slide_bar2">
+            <div class="div_icono_grid">
+              <a href="#">
+                <div class="centrado_icono"><img class="icono_grid" src="./icons/study-2-svgrepo-com.svg" alt=""></div></a>
+            </div>
+            <div class="texto_grid">
+              <div class="titulo_grid"><h1>Diferentes Anto</h1></div>
+              <div class="cuerpo_grid"><p>Hola! Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere,nasjdnsasjknd askdjalsjdas laksjdlkasjlkdjas ksajdlkasj kasdn lknsad lksndklansdklna lksandklasn lk</p></div>
+            </div>
+          </div>
+
+
+          <div class="box box_footer">
+            <div class="div_icono_grid">
+              <a href="#">
+                <div class="centrado_icono"><img class="icono_grid" src="./icons/study-2-svgrepo-com.svg" alt=""></div></a>
+            </div>
+            <div class="texto_grid">
+              <div class="titulo_grid"><h1>Diferentes Surp</h1></div>
+              <div class="cuerpo_grid"><p>Hola! Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere,nasjdnsasjknd askdjalsjdas laksjdlkasjlkdjas ksajdlkasj kasdn lknsad lksndklansdklna lksandklasn lk</p></div>
+            </div>
+          </div>
         </div>
       </div>
       <h1>Esperando para crear el footer... y de paso probamos a hacer un commit jejejej</h1>
