Co-authored-by: JUAN MARTIN BARRACHINA ALFONSO <jubaal@floridauniversitaria.es>

--- a/en/index.html
+++ b/en/index.html
@@ -116,7 +116,7 @@ window.onclick = function(event) {
                 <div class="centrado_icono"><img class="icono_grid" src="./icons/study-2-svgrepo-com.svg" alt=""></div></a>
             </div>
             <div class="texto_grid">
-              <div class="titulo_grid"><h1>Diferentes Grados</h1></div>
+              <div class="titulo_grid"><h1>SUBJECTS</h1></div>
               <div class="cuerpo_grid"><p>Hola! Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere,nasjdnsasjknd askdjalsjdas laksjdlkasjlkdjas ksajdlkasj kasdn lknsad lksndklansdklna lksandklasn lk</p></div>
             </div>
           </div>
@@ -128,7 +128,7 @@ window.onclick = function(event) {
                 <div class="centrado_icono"><img class="icono_grid" src="./icons/study-2-svgrepo-com.svg" alt=""></div></a>
             </div>
             <div class="texto_grid">
-              <div class="titulo_grid"><h1>Diferentes Pakos</h1></div>
+              <div class="titulo_grid"><h1>Advance Vocational training courses</h1></div>
               <div class="cuerpo_grid"><p>Hola! Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere,nasjdnsasjknd askdjalsjdas laksjdlkasjlkdjas ksajdlkasj kasdn lknsad lksndklansdklna lksandklasn lk</p></div>
             </div>
           </div>
@@ -140,7 +140,7 @@ window.onclick = function(event) {
                 <div class="centrado_icono"><img class="icono_grid" src="./icons/study-2-svgrepo-com.svg" alt=""></div></a>
             </div>
             <div class="texto_grid">
-              <div class="titulo_grid"><h1>Diferentes Pepes</h1></div>
+              <div class="titulo_grid"><h1>FACILITIES</h1></div>
               <div class="cuerpo_grid"><p>Hola! Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere,nasjdnsasjknd askdjalsjdas laksjdlkasjlkdjas ksajdlkasj kasdn lknsad lksndklansdklna lksandklasn lk</p></div>
             </div>
           </div>
