--- a/en/index.html
+++ b/en/index.html
@@ -117,7 +117,7 @@ window.onclick = function(event) {
             </div>
             <div class="texto_grid">
               <div class="titulo_grid"><h1>SUBJECTS</h1></div>
-              <div class="cuerpo_grid"><p>Hola! Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere,nasjdnsasjknd askdjalsjdas laksjdlkasjlkdjas ksajdlkasj kasdn lknsad lksndklansdklna lksandklasn lk</p></div>
+              <div class="cuerpo_grid"><p>Here you can see the diferents subjects we have in the two IT years</p></div>
             </div>
           </div>
 
