we added some new icons and we moved the directory icons to the root directory

--- a/en/index.html
+++ b/en/index.html
@@ -113,11 +113,11 @@ window.onclick = function(event) {
           <div class="box box_grados">
             <div class="div_icono_grid">
               <a href="#">
-                <div class="centrado_icono"><img class="icono_grid" src="./icons/study-2-svgrepo-com.svg" alt=""></div></a>
+                <div class="centrado_icono"><img class="icono_grid" src="/icons/study-2-svgrepo-com.svg" alt=""></div></a>
             </div>
             <div class="texto_grid">
               <div class="titulo_grid"><h1>SUBJECTS</h1></div>
-              <div class="cuerpo_grid"><p>Here you can see the subjects that are studied in the two years of </p></div>
+              <div class="cuerpo_grid"><p>Here you can see the subjects that are studied in the two years of TSMR</p></div>
             </div>
           </div>
 
@@ -125,7 +125,7 @@ window.onclick = function(event) {
           <div class="box box_">
             <div class="div_icono_grid">
               <a href="#">
-                <div class="centrado_icono"><img class="icono_grid" src="./icons/study-2-svgrepo-com.svg" alt=""></div></a>
+                <div class="centrado_icono"><img class="icono_grid" src="/icons/education.svg" alt=""></div></a>
             </div>
             <div class="texto_grid">
               <div class="titulo_grid"><h1>Advance Vocational training courses</h1></div>
@@ -137,7 +137,7 @@ window.onclick = function(event) {
           <div class="box box_content">
             <div class="div_icono_grid">
               <a href="#">
-                <div class="centrado_icono"><img class="icono_grid" src="./icons/study-2-svgrepo-com.svg" alt=""></div></a>
+                <div class="centrado_icono"><img class="icono_grid" src="/icons/places.svg" alt=""></div></a>
             </div>
             <div class="texto_grid">
               <div class="titulo_grid"><h1>FACILITIES</h1></div>
