--- a/en/index.html
+++ b/en/index.html
@@ -113,7 +113,7 @@ window.onclick = function(event) {
           <div class="box box_grados">
             <div class="div_icono_grid">
               <a href="#">
-                <div class="centrado_icono"><img class="icono_grid" src="/icons/study-2-svgrepo-com.svg" alt=""></div></a>
+                <div class="centrado_icono"><img class="icono_grid" src="../icons/study-2-svgrepo-com.svg" alt=""></div></a>
             </div>
             <div class="texto_grid">
               <div class="titulo_grid"><h1>SUBJECTS</h1></div>
@@ -125,7 +125,7 @@ window.onclick = function(event) {
           <div class="box box_">
             <div class="div_icono_grid">
               <a href="#">
-                <div class="centrado_icono"><img class="icono_grid" src="/icons/education.svg" alt=""></div></a>
+                <div class="centrado_icono"><img class="icono_grid" src="../icons/education.svg" alt=""></div></a>
             </div>
             <div class="texto_grid">
               <div class="titulo_grid"><h1>Advance Vocational training courses</h1></div>
@@ -137,11 +137,11 @@ window.onclick = function(event) {
           <div class="box box_content">
             <div class="div_icono_grid">
               <a href="#">
-                <div class="centrado_icono"><img class="icono_grid" src="/icons/places.svg" alt=""></div></a>
+                <div class="centrado_icono"><img class="icono_grid" src="../icons/places.svg" alt=""></div></a>
             </div>
             <div class="texto_grid">
               <div class="titulo_grid"><h1>FACILITIES</h1></div>
-              <div class="cuerpo_grid"><p>Hola! Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere,nasjdnsasjknd askdjalsjdas laksjdlkasjlkdjas ksajdlkasj kasdn lknsad lksndklansdklna lksandklasn lk</p></div>
+              <div class="cuerpo_grid"><p> Discover our facilities and where you can find us!</p></div>
             </div>
           </div>
 
