--- a/en/index.html
+++ b/en/index.html
@@ -128,8 +128,8 @@ window.onclick = function(event) {
                 <div class="centrado_icono"><img class="icono_grid" src="../icons/education.svg" alt=""></div></a>
             </div>
             <div class="texto_grid">
-              <div class="titulo_grid"><h1>Advance Vocational training courses</h1></div>
-              <div class="cuerpo_grid"><p>HAdvance Vocational training courses Advance Vocational training courses Advance Vocational training courses Advance Vocational training courses</p></div>
+              <div class="titulo_grid"><h1>Advanced Vocational training courses</h1></div>
+              <div class="cuerpo_grid"><p>If you have completed the TSMR vocational training, you can access some advanced vocational trainings courses on this page.</p></div>
             </div>
           </div>
 
@@ -148,10 +148,10 @@ window.onclick = function(event) {
           <div class="box box_slide_bar1">
             <div class="div_icono_grid">
               <a href="#">
-                <div class="centrado_icono"><img class="icono_grid" src="./icons/study-2-svgrepo-com.svg" alt=""></div></a>
+                <div class="centrado_icono"><img class="icono_grid" id="educational" src="../icons/whiteboard.svg" alt=""></div></a>
             </div>
             <div class="texto_grid">
-              <div class="titulo_grid"><h1>Diferentes Joses</h1></div>
+              <div class="titulo_grid"><h1> Educational Model </h1></div>
               <div class="cuerpo_grid"><p>Hola! Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere,nasjdnsasjknd askdjalsjdas laksjdlkasjlkdjas ksajdlkasj kasdn lknsad lksndklansdklna lksandklasn lk</p></div>
             </div>
           </div>
@@ -160,11 +160,11 @@ window.onclick = function(event) {
           <div class="box box_slide_bar2">
             <div class="div_icono_grid">
               <a href="#">
-                <div class="centrado_icono"><img class="icono_grid" src="./icons/study-2-svgrepo-com.svg" alt=""></div></a>
+                <div class="centrado_icono"><img class="icono_grid" id="international" src="../icons/international.svg" alt=""></div></a>
             </div>
             <div class="texto_grid">
-              <div class="titulo_grid"><h1>Diferentes Anto</h1></div>
-              <div class="cuerpo_grid"><p>Hola! Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere,nasjdnsasjknd askdjalsjdas laksjdlkasjlkdjas ksajdlkasj kasdn lknsad lksndklansdklna lksandklasn lk</p></div>
+              <div class="titulo_grid"><h1> International </h1></div>
+              <div class="cuerpo_grid"><p>Do you know that you can study in almost all countries around the world? discover more here.</p></div>
             </div>
           </div>
 
@@ -172,11 +172,11 @@ window.onclick = function(event) {
           <div class="box box_footer">
             <div class="div_icono_grid">
               <a href="#">
-                <div class="centrado_icono"><img class="icono_grid" src="./icons/study-2-svgrepo-com.svg" alt=""></div></a>
+                <div class="centrado_icono"><img class="icono_grid" id="about" src="../icons/about.svg" alt=""></div></a>
             </div>
             <div class="texto_grid">
-              <div class="titulo_grid"><h1>Diferentes Surp</h1></div>
-              <div class="cuerpo_grid"><p>Hola! Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere,nasjdnsasjknd askdjalsjdas laksjdlkasjlkdjas ksajdlkasj kasdn lknsad lksndklansdklna lksandklasn lk</p></div>
+              <div class="titulo_grid"><h1>About us</h1></div>
+              <div class="cuerpo_grid"><p>More information about us :)</p></div>
             </div>
           </div>
         </div>
