Final for today 20-01-2023

--- a/en/index.html
+++ b/en/index.html
@@ -164,7 +164,7 @@ window.onclick = function(event) {
             </div>
             <div class="texto_grid">
               <div class="titulo_grid"><h1> International </h1></div>
-              <div class="cuerpo_grid"><p>Do you know that you can study in almost all countries around the world? discover more here.</p></div>
+              <div class="cuerpo_grid"><p>Do you know that you can study in almost all countries around the world? Discover more here.</p></div>
             </div>
           </div>
 
