hemos realizado la base del footer

--- a/en/index.html
+++ b/en/index.html
@@ -105,7 +105,7 @@ window.onclick = function(event) {
           </ul>
         </div>
       </div>
-
+      <div class="espacio_grid"></div>
       <div id="contenedor_grid">
         <div class="grid">
 
@@ -181,7 +181,17 @@ window.onclick = function(event) {
           </div>
         </div>
       </div>
-      <h1>Esperando para crear el footer... y de paso probamos a hacer un commit jejejej</h1>
+      <div class="espacio_grid"></div>
+
+      <footer>
+        <div class="container_footer">
+          <div class="izq_footer">
+            <div class="logo_footer"></div>
+          </div>
+          <div class="centro_footer"></div>
+          <div class="der_footer"></div>
+        </div>
+      </footer>
 
 </body>
 </html>
