hemos puesto los iconos de las rrss del footer

--- a/en/index.html
+++ b/en/index.html
@@ -186,7 +186,20 @@ window.onclick = function(event) {
       <footer>
         <div class="container_footer">
           <div class="izq_footer">
-            <div class="logo_footer"></div>
+            <div class="logo_footer"><img src="../icons/Logo-florida-blanco.svg" alt=""></div>
+            <div class="redes_sociales_footer">
+              
+              <div class="instagram alineado_iconos"><a href=""><img class="icons_footer" src="../icons/twitter.svg" alt=""></a></div>
+              
+              <div class="twitter alineado_iconos"><a href=""><img class="icons_footer " src="../icons/twitter.svg" alt=""></a></div>
+
+              <div class="facebook alineado_iconos"><a href=""><img class="icons_footer  " src="../icons/twitter.svg" alt=""></a></div>
+
+              <div class="pak alineado_iconos"><a href=""><img class="icons_footer" src="../icons/twitter.svg" alt=""></a></div>
+
+              <div class="pep alineado_iconos"><a href=""><img class="icons_footer" src="../icons/twitter.svg" alt=""></a></div>
+
+            </div>
           </div>
           <div class="centro_footer"></div>
           <div class="der_footer"></div>
