--- a/es/index.html
+++ b/es/index.html
@@ -113,71 +113,71 @@ window.onclick = function(event) {
           <div class="box box_grados">
             <div class="div_icono_grid">
               <a href="#">
-                <div class="centrado_icono"><img class="icono_grid" src="../icons/study-2-svgrepo-com.svg" alt=""></div></a>
+                <div class="centrado_icono"><img class="icono_grid" src="../icons/study-2-svgrepo-com.svg" alt=""></div>
             </div>
             <div class="texto_grid">
               <div class="titulo_grid"><h1>Asignaturas</h1></div>
               <div class="cuerpo_grid"><p>Aquí puedes ver las asignaturas que se estudian en los dos años de TSMR</p></div>
-            </div>
+            </div></a>
           </div>
 
           <!-- nose -->
           <div class="box box_">
             <div class="div_icono_grid">
               <a href="#">
-                <div class="centrado_icono"><img class="icono_grid" src="../icons/education.svg" alt=""></div></a>
+                <div class="centrado_icono"><img class="icono_grid" src="../icons/education.svg" alt=""></div>
             </div>
             <div class="texto_grid">
               <div class="titulo_grid"><h1>Grado Superior</h1></div>
               <div class="cuerpo_grid"><p>Si has completado el grado medio de TSMR puedes acceder a algún grado superior en esta página.</p></div>
-            </div>
+            </div></a>
           </div>
 
 
           <div class="box box_content">
             <div class="div_icono_grid">
               <a href="#">
-                <div class="centrado_icono"><img class="icono_grid" src="../icons/places.svg" alt=""></div></a>
+                <div class="centrado_icono"><img class="icono_grid" src="../icons/places.svg" alt=""></div>
             </div>
             <div class="texto_grid">
               <div class="titulo_grid"><h1>Comodidades</h1></div>
               <div class="cuerpo_grid"><p>Descubre las comodidades que ofrece Florida y dónde puedes encontrarnos!</p></div>
-            </div>
+            </div></a>
           </div>
 
           <div class="box box_slide_bar1">
             <div class="div_icono_grid">
               <a href="#">
-                <div class="centrado_icono"><img class="icono_grid" id="educational" src="../icons/whiteboard.svg" alt=""></div></a>
+                <div class="centrado_icono"><img class="icono_grid" id="educational" src="../icons/whiteboard.svg" alt=""></div>
             </div>
             <div class="texto_grid">
               <div class="titulo_grid"><h1>Modelo educativo</h1></div>
-              <div class="cuerpo_grid"><p>La educacion es fundamental, aquí te explicamos cómo aplicamos la educación en Florida</p></div>
-            </div>
+              <div class="cuerpo_grid"><p>La educación es fundamental, aquí te explicamos cómo aplicamos la educación en Florida</p></div>
+            </div></a>
           </div>
 
 
           <div class="box box_slide_bar2">
             <div class="div_icono_grid">
               <a href="#">
-                <div class="centrado_icono"><img class="icono_grid" id="international" src="../icons/international.svg" alt=""></div></a>
+                <div class="centrado_icono"><img class="icono_grid" id="international" src="../icons/international.svg" alt=""></div>
             </div>
             <div class="texto_grid">
               <div class="titulo_grid"><h1> Internacional </h1></div>
-              <div class="cuerpo_grid"><p>Sabes que puedes estudiar en casi todos los paises alrededor del mundo? Descubre más aquí.</p></div>
-            </div>
+              <div class="cuerpo_grid"><p>Sabes que puedes estudiar en casi todos los países alrededor del mundo? Descubre más aquí.</p></div>
+            </div></a>
           </div>
 
 
           <div class="box box_footer">
             <div class="div_icono_grid">
               <a href="#">
-                <div class="centrado_icono"><img class="icono_grid" id="about" src="../icons/about.svg" alt=""></div></a>
+                <div class="centrado_icono"><img class="icono_grid" id="about" src="../icons/about.svg" alt=""></div>
             </div>
             <div class="texto_grid">
               <div class="titulo_grid"><h1>Sobre nosotros</h1></div>
               <div class="cuerpo_grid"><p>Más información sobre nosotros :)</p></div>
-            </div>
+            </div></a>
           </div>
         </div>
       </div>
@@ -206,20 +206,19 @@ window.onclick = function(event) {
 
           <div class="centro_footer">
             <div class="centro_container">
+              <a href="https://goo.gl/maps/MofCRgt1QWkSV63w7" target="_blank">
               <div class="centro_direccion espacio_direccion">
                 <p>C/ Rei en Jaume I, nº 2, 46470</p>
-                
-
               </div>
               <div class="centro_direccion">
                 <p>CATARROJA (Valencia)</p>
-                
-
               </div>
+            </a>
+
               <div class="centro_contacto espacio_contacto">
                 <p> <a href="tel:+34961220380">+34 96 122 03 80</a>
                   - 
-                  <a href="mailto:+34 96 122 03 80">info@florida.es</a> </p>
+                  <a href="mailto:info@florida.es">info@florida.es</a> </p>
               </div>
             </div>
           </div>
