--- a/index.html
+++ b/index.html
@@ -112,72 +112,72 @@ window.onclick = function(event) {
           <!-- diferentes grados -->
           <div class="box box_grados">
             <div class="div_icono_grid">
-              <a href="#">
-                <div class="centrado_icono"><img class="icono_grid" src="./icons/study-2-svgrepo-com.svg" alt=""></div></a>
+              <a href="./en/subjects.html">
+                <div class="centrado_icono"><img class="icono_grid" src="./icons/study-2-svgrepo-com.svg" alt=""></div>
             </div>
             <div class="texto_grid">
               <div class="titulo_grid"><h1>Subjects</h1></div>
               <div class="cuerpo_grid"><p>Here you can see the subjects that are studied in the two years of TSMR</p></div>
-            </div>
+            </div></a>
           </div>
 
           <!-- nose -->
           <div class="box box_">
             <div class="div_icono_grid">
               <a href="#">
-                <div class="centrado_icono"><img class="icono_grid" src="./icons/education.svg" alt=""></div></a>
+                <div class="centrado_icono"><img class="icono_grid" src="./icons/education.svg" alt=""></div>
             </div>
             <div class="texto_grid">
               <div class="titulo_grid"><h1>Advanced Vocational training courses</h1></div>
               <div class="cuerpo_grid"><p>If you have completed the TSMR vocational training, you can access some advanced vocational trainings courses on this page.</p></div>
-            </div>
+            </div></a>
           </div>
 
 
           <div class="box box_content">
             <div class="div_icono_grid">
               <a href="#">
-                <div class="centrado_icono"><img class="icono_grid" src="./icons/places.svg" alt=""></div></a>
+                <div class="centrado_icono"><img class="icono_grid" src="./icons/places.svg" alt=""></div>
             </div>
             <div class="texto_grid">
               <div class="titulo_grid"><h1>Facilities</h1></div>
               <div class="cuerpo_grid"><p> Discover our facilities and where you can find us!</p></div>
-            </div>
+            </div></a>
           </div>
 
           <div class="box box_slide_bar1">
             <div class="div_icono_grid">
               <a href="#">
-                <div class="centrado_icono"><img class="icono_grid" id="educational" src="./icons/whiteboard.svg" alt=""></div></a>
+                <div class="centrado_icono"><img class="icono_grid" id="educational" src="./icons/whiteboard.svg" alt=""></div>
             </div>
             <div class="texto_grid">
               <div class="titulo_grid"><h1> Educational Model </h1></div>
-              <div class="cuerpo_grid"><p>Hola! Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere,nasjdnsasjknd askdjalsjdas laksjdlkasjlkdjas ksajdlkasj kasdn lknsad lksndklansdklna lksandklasn lk</p></div>
-            </div>
+              <div class="cuerpo_grid"><p>The education is fundamental, here we explain you how we apply the education in Florida.</p></div>
+            </div></a>
           </div>
 
 
           <div class="box box_slide_bar2">
             <div class="div_icono_grid">
               <a href="#">
-                <div class="centrado_icono"><img class="icono_grid" id="international" src="./icons/international.svg" alt=""></div></a>
+                <div class="centrado_icono"><img class="icono_grid" id="international" src="./icons/international.svg" alt=""></div>
             </div>
             <div class="texto_grid">
               <div class="titulo_grid"><h1> International </h1></div>
               <div class="cuerpo_grid"><p>Do you know that you can study in almost all countries around the world? Discover more here.</p></div>
-            </div>
+            </div></a>
           </div>
 
 
           <div class="box box_footer">
             <div class="div_icono_grid">
               <a href="#">
-                <div class="centrado_icono"><img class="icono_grid" id="about" src="./icons/about.svg" alt=""></div></a>
+                <div class="centrado_icono"><img class="icono_grid" id="about" src="./icons/about.svg" alt=""></div>
             </div>
             <div class="texto_grid">
               <div class="titulo_grid"><h1>About us</h1></div>
               <div class="cuerpo_grid"><p>More information about us :)</p></div>
-            </div>
+            </div></a>
           </div>
         </div>
       </div>
@@ -206,6 +206,7 @@ window.onclick = function(event) {
 
           <div class="centro_footer">
             <div class="centro_container">
+              <a href="https://goo.gl/maps/MofCRgt1QWkSV63w7" target="_blank">
               <div class="centro_direccion espacio_direccion">
                 <p>C/ Rei en Jaume I, nº 2, 46470</p>
                 
@@ -213,13 +214,13 @@ window.onclick = function(event) {
               </div>
               <div class="centro_direccion">
                 <p>CATARROJA (Valencia)</p>
-                
-
               </div>
+            </a>
+
               <div class="centro_contacto espacio_contacto">
                 <p> <a href="tel:+34961220380">+34 96 122 03 80</a>
                   - 
-                  <a href="mailto:+34 96 122 03 80">info@florida.es</a> </p>
+                  <a href="mailto:info@florida.es">info@florida.es</a> </p>
               </div>
             </div>
           </div>
