Hemos realizado lo que sería subjects, a falta de traducirlo a Valenciano,

--- a/en/index.html
+++ b/en/index.html
@@ -54,7 +54,7 @@ window.onclick = function(event) {
         <div id="parte_abajo">
             <nav class="parte_abajo contenedor">
                 
-                <a href="#">Inicio</a>
+                <a href="#">Beggining</a>
                 <a href="#">About Us</a>
                 <a href="#">Studies</a>
                 <a href="#">Educational Model</a>
