--- a/es/index.html
+++ b/es/index.html
@@ -68,7 +68,7 @@ window.onclick = function(event) {
         <div class="dropdown">
           <button onclick="myFunction()" class="dropbtn" title="Haz click para ver los idiomas disponibles">Click para Idiomas</button>
           <div id="myDropdown" class="dropdown-content">
-            <div id="english"><img id="tick" src="../img/tick.png" alt=""><a href="./index.html"> &nbsp; &nbsp; &nbsp;Español</a></div>
+            <div id="english"><img id="tick" src="../img/tick.png" alt=""><a href="#"> &nbsp; &nbsp; &nbsp;Español</a></div>
         
         <a href="../en/index.html">English</a>
         <a href="../val/index.html">Valencià</a>
@@ -113,7 +113,7 @@ window.onclick = function(event) {
           <!-- diferentes grados -->
           <div class="box box_grados">
             <div class="div_icono_grid">
-              <a href="#">
+              <a href="./subjects.html">
                 <div class="centrado_icono"><img class="icono_grid" src="../icons/study-2-svgrepo-com.svg" alt=""></div>
             </div>
             <div class="texto_grid">
