todo bien hasta ahora, falta acabar los botones y traducir

--- a/en/index.html
+++ b/en/index.html
@@ -56,7 +56,7 @@ window.onclick = function(event) {
                 
                 <a href="#">Beggining</a>
                 <a href="#">About Us</a>
-                <a href="#">Studies</a>
+                <a href="./superior.html">Studies</a>
                 <a href="#">Educational Model</a>
                 <a href="#">International</a>
                 
@@ -127,7 +127,7 @@ window.onclick = function(event) {
           <!-- nose -->
           <div class="box box_">
             <div class="div_icono_grid">
-              <a href="#">
+              <a href="./superior.html">
                 <div class="centrado_icono"><img class="icono_grid" src="../icons/education.svg" alt=""></div>
             </div>
             <div class="texto_grid">
