--- a/es/subjects.html
+++ b/es/subjects.html
@@ -76,7 +76,7 @@ if(btns){
             <nav class="parte_abajo contenedor">
                 
                 
-                <a href="#">Inicio</a>
+                <a href="./index.html">Inicio</a>
                 <a href="#">Sobre Nosotros</a>
                 <a href="#">Estudios</a>
                 <a href="#">Modelo educativo</a>
