vamos a por los superiores

--- a/en/subjects.html
+++ b/en/subjects.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../styles/idiomas.css">
     <link rel="stylesheet" href="../styles/grid.css">
     <link rel="stylesheet" href="../styles/style_no_main.css">
-    <script src="../prueba_JS.js"></script>
+    <script src="../subjects.js"></script>
     <script>
       /* When the user clicks on the button,
 toggle between hiding and showing the dropdown content */
